restored the nowrap to make sure lists appear correctly

--- a/style/common.css
+++ b/style/common.css
@@ -223,7 +223,7 @@ input[type="checkbox"] {
  */
 .list td {
     text-align: center;
-    /*white-space:nowrap;*/
+    white-space:nowrap;
 }
 table.smartsearch td {
     text-align: left;
